tests/errors/single_space_after_construct.php
<?php

declare(strict_types=1);

class Hello
{
}

$a = new   Hello();
